--- a/InventarioPro/Client/wwwroot/index.html
+++ b/InventarioPro/Client/wwwroot/index.html
@@ -34,9 +34,12 @@
     <script src="_content/CurrieTechnologies.Razor.SweetAlert2/sweetAlert2.min.js"></script>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
     <script src="js/utilidades.js"></script>
+    <script src="js/pdfDownload.js"></script>
+
+
 
 
 
 </body>
 
-</html>
+</html >
