Login y registro UI y funcionalidad

--- a/InventarioPro/Client/wwwroot/index.html
+++ b/InventarioPro/Client/wwwroot/index.html
@@ -35,6 +35,7 @@
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
     <script src="js/utilidades.js"></script>
     <script src="js/pdfDownload.js"></script>
+    <script src="js/localStorage.js"></script>
 
 
 
